--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-yp-base",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "eslint config for Yellow Pages.",
   "main": "index.js",
   "nyc": {
@@ -33,8 +33,8 @@
     "nyc": "^10.3.2"
   },
   "dependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint": "4.3.0",
+    "eslint-config-airbnb-base": "11.3.1",
+    "eslint-plugin-import": "2.7.0"
   }
 }
